# crunchbase-integration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
crunchbase/: crunchbase_api.py  settings.py
crunchbase/schemas/: organization.py
tests/: conftest.py  test_crunchbase_api.py  test_organization_schema.py
tests/testresources/crunchbase/organizations/: test_organization.json
