[tool.poetry]
name = "crunchbase"
version = "0.1.0"
description = ""
authors = ["mykola <mykola.melnyk.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2"
pydantic-settings = "^2"
datamodel-code-generator = "^0.26.5"
requests = "^2.32.3"
tenacity = "^9.0.0"
requests-mock = "^1.12.1"
types-requests = "^2.32.0.20241016"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.5.0"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest-cov = "^5"
pytest-env = "^1.1.3"
pytest-resource-path = "1.3.0"
